fixing search bar padding on Safari

--- a/src/components/SearchBar/styles.css
+++ b/src/components/SearchBar/styles.css
@@ -55,6 +55,8 @@
   width: 100%;
   font-size: 16px;
   font-weight: bold;
+  margin: 0;
+  padding: 0;
 }
 
 .search-field-input:focus {
